[package]
name = "network_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
pcap = "1.1.0"
sysinfo = "0.29.10"
clap = { version = "4.3", features = ["derive"] }
chrono = "0.4"
tui = "0.19"
crossterm = "0.25"
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
