[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "offline"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
validator = { version = "0.19", features = ["derive"] }