[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"
validator = { version = "0.19", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
thiserror = "2.0.9"
tracing = "0.1"
serde_json = "1.0.134"
